[package]
edition = "2021"
name = "google-speech"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures-core = "0.3.26"
futures-util = "0.3.15"
google-cognitive-apis = "0.2.1"
log = "0.4.17"
tokio = {version = "1.25.0", features = ["rt-multi-thread"]}
